objects/System_Changes__c.object
<CustomObject>
    <description>Used to create records that automatically document and track changes to the system.

Changes can be tracked by adding the SCH number to the descriptions of fields or other components that have been updated. Example: 

SCH-0000</description>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <inlineHelpText>Summarize the changes for an Admin or Developer audience.</inlineHelpText>
        <label>Admin &amp; Dev Notes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apex_System_Changes__c</fullName>
        <inlineHelpText>List the name of any Apex classes or triggers that were created or changed.</inlineHelpText>
        <label>Apex Changes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Approval Process
		&gt;Review in Sandbox before Prod</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Builder_Bulk_Tests__c</fullName>
        <label>Builder - Bulk Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I confirmed my changes work when dozens of database updates occur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Builder_Cross_Training__c</fullName>
        <label>Builder - Cross Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I recorded and uploaded a useful training video to the team library</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Builder_Final__c</fullName>
        <label>Builder - Final</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I&apos;m willing to be held personally responsible if these changes fail in production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Builder_Negative_Tests__c</fullName>
        <label>Builder - Negative Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I confirmed my changes don&apos;t appear when and where they&apos;re not supposed to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Builder_Null_Tests__c</fullName>
        <label>Builder - Null Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I confirm my changes don&apos;t occur in null scenarios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Builder_Positive_Tests__c</fullName>
        <label>Builder - Positive Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I confirmed my change is working in positive test scenarios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Helpdesk_Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject0__c</fullName>
        <formula>Helpdesk_Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Complete__c</fullName>
        <formula>IF(
OR(
AND(
NOT(ISBLANK( TEXT( Pair_Programmer__c ))),
NOT(ISBLANK( Test_Scenario_Spreadsheet__c  )),
NOT(ISBLANK( TEXT(Builder_Bulk_Tests__c ))),
NOT(ISBLANK( TEXT(Builder_Final__c ))),
NOT(ISBLANK( TEXT(Builder_Negative_Tests__c ))),
NOT(ISBLANK( TEXT(Builder_Positive_Tests__c ))),
NOT(ISBLANK( TEXT(Builder_Null_Tests__c ))),
NOT(ISBLANK( TEXT(Reviewer_Bulk_Tests__c ))),
NOT(ISBLANK( TEXT(Reviewer_Positive_Tests__c ))),
NOT(ISBLANK( TEXT(Reviewer_Negative_Tests__c  ))),
NOT(ISBLANK( TEXT(Reviewer_Null_Tests__c ))),
NOT(ISBLANK( TEXT(Reviewer_Final__c )))),

AND(
NOT(ISBLANK( TEXT( Pair_Programmer__c ))),
NOT(ISBLANK( TEXT(Builder_Cross_Training__c ))),
NOT(ISBLANK( TEXT(Reviewer_Cross_Training__c ))),
NOT(ISBLANK( Link_to_Training_Video__c )))
), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Complete?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Reviewer__c</fullName>
        <label>Change Reviewer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Caleb</fullName>
                </value>
                <value>
                    <fullName>Grady</fullName>
                </value>
                <value>
                    <fullName>Nick</fullName>
                </value>
                <value>
                    <fullName>Phil</fullName>
                </value>
                <value>
                    <fullName>Sally</fullName>
                </value>
                <value>
                    <fullName>Sami</fullName>
                </value>
                <value>
                    <fullName>Shobi</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Configuration_Changes_Made__c</fullName>
        <inlineHelpText>Changes from the Setup menu - Fields / validation rules / permission sets, etc.</inlineHelpText>
        <label>Setup or Configuration Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_of_Change__c</fullName>
        <inlineHelpText>Be specific, but write for User audience</inlineHelpText>
        <label>Description of Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Request__c</fullName>
        <inlineHelpText>Body of description from the case &gt; Auto - Created with Quick Action</inlineHelpText>
        <label>Case Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_you_confirm_functionality_with_user__c</fullName>
        <label>Did you confirm functionality with user?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Instructions__c</fullName>
        <inlineHelpText>Give granular instruction to User on how to use the change</inlineHelpText>
        <label>End User Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flow_Builder_Changes__c</fullName>
        <inlineHelpText>List the names of any new or updated flow builders.</inlineHelpText>
        <label>Flow Builder Changes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Case__c</fullName>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Help Desk</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>System Changes</relationshipLabel>
        <relationshipName>System_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>How_can_we_make_this_process_1_better__c</fullName>
        <inlineHelpText>Write a minimum of 1 sentence on how you believe we can make this process 1% better.</inlineHelpText>
        <label>How can we make this process 1% better?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Training_Video__c</fullName>
        <label>Link to Training Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Object_Changed__c</fullName>
        <label>Object Changed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bookkeeping Records</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Credit Card Detail</fullName>
                </value>
                <value>
                    <fullName>Entity</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Meeting Minutes</fullName>
                </value>
                <value>
                    <fullName>Opportunity Product (Line Item)</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Set of Books</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Code_Changes__c</fullName>
        <inlineHelpText>Other code changes outside of Apex. Visualforce, Lightning Components...etc.</inlineHelpText>
        <label>Other Code Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_System_Changes__c</fullName>
        <label>Other System Changes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pair_Programmer__c</fullName>
        <label>Pair Programmer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andy</fullName>
                    <isActive>false</isActive>
                    <label>Andy</label>
                </value>
                <value>
                    <fullName>Caleb</fullName>
                </value>
                <value>
                    <fullName>Grady</fullName>
                </value>
                <value>
                    <fullName>Kazim</fullName>
                </value>
                <value>
                    <fullName>Nick</fullName>
                </value>
                <value>
                    <fullName>Not Needed</fullName>
                    <default>true</default>
                    <label>Not Needed</label>
                </value>
                <value>
                    <fullName>Phil</fullName>
                    <isActive>false</isActive>
                    <label>Phil</label>
                </value>
                <value>
                    <fullName>Rabeea</fullName>
                </value>
                <value>
                    <fullName>Romel</fullName>
                </value>
                <value>
                    <fullName>Sally</fullName>
                    <isActive>false</isActive>
                    <label>Sally</label>
                </value>
                <value>
                    <fullName>Sami</fullName>
                </value>
                <value>
                    <fullName>Shobi</fullName>
                </value>
                <value>
                    <fullName>Swarna</fullName>
                </value>
                <value>
                    <fullName>Umar</fullName>
                </value>
                <value>
                    <fullName>Wakeel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permanently_Fixed__c</fullName>
        <inlineHelpText>Has the solution solved the problem so new help requests no longer need to be created for this issue?</inlineHelpText>
        <label>Permanently Fixed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Positive_Negative_Null_and_Bulk_test__c</fullName>
        <inlineHelpText>Were positive, negative, bulk, and Null tests performed? And did they pass?</inlineHelpText>
        <label>Tested?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Builder_Changes__c</fullName>
        <inlineHelpText>List any new or updated process builder along with the criteria that were changed or added.</inlineHelpText>
        <label>Process Builder Changes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Released_to_Production_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_By0__c</fullName>
        <formula>Helpdesk_Case__r.CreatedBy.FirstName + &quot; &quot; +  Helpdesk_Case__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Complicated change that needs more communication to business</inlineHelpText>
        <label>Requires Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer_Bulk_Tests__c</fullName>
        <label>Reviewer - Bulk Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I independently confirmed these changes work when dozens of database updates occur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_Cross_Training__c</fullName>
        <label>Reviewer - Cross Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I honestly watched the training video and provided one meaningful improvement below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_Final__c</fullName>
        <label>Reviewer - Final</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I&apos;m willing to be held personally responsible if these changes fail in production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_Negative_Tests__c</fullName>
        <label>Reviewer - Negative Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I confirmed these changes don&apos;t appear when and where they&apos;re not supposed to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_Null_Tests__c</fullName>
        <label>Reviewer - Null Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I independently confirmed these changes don&apos;t occur in null scenarios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_Positive_Tests__c</fullName>
        <label>Reviewer - Positive Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I independently confirmed this change is working in positive test scenarios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rollback_Instructions__c</fullName>
        <inlineHelpText>Provide details on how to undo these changes.</inlineHelpText>
        <label>Rollback Instructions</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of Change</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Review Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Deployment</fullName>
                </value>
                <value>
                    <fullName>Released to Production</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>Subject line from case. Auto-created from Quick Action.</inlineHelpText>
        <label>Case Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Risk__c</fullName>
        <inlineHelpText>Good to use as a guide for the level of testing needed</inlineHelpText>
        <label>System Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                    <isActive>false</isActive>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <isActive>false</isActive>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <isActive>false</isActive>
                    <label>Medium</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Scenario_Spreadsheet__c</fullName>
        <label>Test Scenario Spreadsheet</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Testing_Evidence__c</fullName>
        <inlineHelpText>Depends on complexity. Screenshot only or Multi-Step test plan.</inlineHelpText>
        <label>Testing Evidence</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type_of_Change__c</fullName>
        <label>Type of Change</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Application Install</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Data Load</fullName>
                </value>
                <value>
                    <fullName>Field Creation/Change</fullName>
                </value>
                <value>
                    <fullName>Field Set</fullName>
                </value>
                <value>
                    <fullName>Flow / Process</fullName>
                </value>
                <value>
                    <fullName>List View</fullName>
                </value>
                <value>
                    <fullName>Object Creation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Page Layout</fullName>
                </value>
                <value>
                    <fullName>Permissions</fullName>
                </value>
                <value>
                    <fullName>Profile / Role</fullName>
                </value>
                <value>
                    <fullName>Record Type</fullName>
                </value>
                <value>
                    <fullName>Report / Dashboard</fullName>
                </value>
                <value>
                    <fullName>System Settings</fullName>
                </value>
                <value>
                    <fullName>Table Update / Creation</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>Validation Rule</fullName>
                </value>
                <value>
                    <fullName>VisualForce Page</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>System Changes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Case_Subject0__c</columns>
        <columns>Case_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Requested_By0__c</columns>
        <columns>Pair_Programmer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCH-{0000}</displayFormat>
        <label>System Changes Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Changes</pluralLabel>
    <recordTypes>
        <fullName>Cross_Training</fullName>
        <active>true</active>
        <label>Cross Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Testing</fullName>
        <active>true</active>
        <label>Testing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>